[gd_scene load_steps=7 format=3 uid="uid://dg5r61xwo2xy0"]

[ext_resource type="Script" path="res://UI/pauseScreen.gd" id="1_22ylo"]
[ext_resource type="Texture2D" uid="uid://bn232vq7slfw" path="res://Menus/start-normal.png" id="1_xrs3u"]
[ext_resource type="Texture2D" uid="uid://c6782jn5m7h4y" path="res://Menus/start-hover.png" id="2_bnj2n"]
[ext_resource type="Texture2D" uid="uid://v04tmu2ql43q" path="res://Character/alienBlue_swim2.png" id="3_62b2j"]
[ext_resource type="Texture2D" uid="uid://c10eh7q0efwck" path="res://Menus/particulilla.png" id="3_oybfs"]
[ext_resource type="AudioStream" uid="uid://bygwkp83oqqaw" path="res://Sounds/UI_button05.wav" id="4_7mgxd"]

[node name="PauseScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_22ylo")

[node name="botonSonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_7mgxd")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.443137)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -97.0
offset_top = 56.0
offset_right = 101.0
offset_bottom = 148.0
grow_horizontal = 2
theme_override_font_sizes/normal_font_size = 60
theme_override_font_sizes/bold_font_size = 60
text = "PAUSE"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -85.0
offset_right = 74.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2

[node name="btnResume" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
texture_normal = ExtResource("1_xrs3u")
texture_hover = ExtResource("2_bnj2n")

[node name="TouchScreenButton" type="TouchScreenButton" parent="VBoxContainer/btnResume"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-102, -3.05176e-05)
scale = Vector2(0.828125, 0.6875)
texture_normal = ExtResource("3_62b2j")
visibility_mode = 1

[node name="btnRestart" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
texture_normal = ExtResource("1_xrs3u")
texture_hover = ExtResource("2_bnj2n")

[node name="TouchScreenButton" type="TouchScreenButton" parent="VBoxContainer/btnRestart"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(23, -1.14441e-05)
scale = Vector2(14.8571, 8.14286)
texture_normal = ExtResource("3_oybfs")
visibility_mode = 1

[node name="btnExit" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
texture_normal = ExtResource("1_xrs3u")
texture_hover = ExtResource("2_bnj2n")

[node name="TouchScreenButton" type="TouchScreenButton" parent="VBoxContainer/btnExit"]
visible = false
modulate = Color(1, 1, 1, 0)
position = Vector2(23, -1.14441e-05)
scale = Vector2(14.8571, 8.14286)
texture_normal = ExtResource("3_oybfs")
visibility_mode = 1

[connection signal="mouse_entered" from="VBoxContainer/btnResume" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/btnResume" to="." method="_on_btn_resume_pressed"]
[connection signal="pressed" from="VBoxContainer/btnResume/TouchScreenButton" to="." method="_on_btn_resume_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/btnRestart" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/btnRestart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="VBoxContainer/btnRestart/TouchScreenButton" to="." method="_on_btn_restart_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/btnExit" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/btnExit" to="." method="_on_btn_exit_pressed"]
[connection signal="pressed" from="VBoxContainer/btnExit/TouchScreenButton" to="." method="_on_btn_exit_pressed"]
